Issue #13: fix z-index of floater background

--- a/pages/css/dialogs.css
+++ b/pages/css/dialogs.css
@@ -8,6 +8,7 @@
   width: 100vw;
   height: 100vh;
   background-color: #9999;
+  z-index: 900;
 }
 
 #floats > div {
